feat(react-redux-async): adjust UI

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
       .toggled {
         text-decoration:line-through
       }
+      .list-style-custom {
+        list-style-type: none;
+        padding-left: 0px;
+      }
     </style>
   </head>
   <body>
